<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/headerbg"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="20dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="85px"
            android:paddingTop="15px" >

            <TextView
                android:id="@+id/Login_TextView_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_help" />

            <TextView
                android:id="@+id/Login_TextView_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/Login_TextView_help"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_phone" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="#FFFFFF"
            android:textSize="15dip" />

        <EditText
            android:id="@+id/Login_EditText_user"
            android:layout_width="fill_parent"
            android:layout_height="30dp" 
            android:layout_marginTop="2dp"
            android:padding="2dp"
            android:singleLine="true"
            android:background="@color/white" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pass_word"
            android:textColor="#FFFFFF"
            android:textSize="15dip" />

        <EditText
           android:id="@+id/Login_EditText_pwd"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            android:layout_marginTop="2dp"
            android:padding="2dp"
            android:password="true"
            android:singleLine="true"/>

        <CheckBox
            android:id="@+id/Login_CheckBox_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:button="@drawable/checkbox"
            android:text="@string/remember_pass_Word" />

        <CheckBox
            android:id="@+id/Login_CheckBox_autoLogin"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox"
            android:text="@string/auto_login" />
      	<Button 
      	    android:id="@+id/Login_Button_login"
      	    android:layout_width="fill_parent"
      	    android:layout_height="wrap_content"
      	    android:layout_marginTop="20dp"
      	    android:text="@string/login"
      	    android:textColor="#FFFFFF"
      	    android:textSize="20dip"
      	    android:background="@drawable/buttonbg"/>
      	<Button 
      	    android:id="@+id/Login_Button_cancel"
      	    android:layout_width="fill_parent"
      	    android:layout_height="wrap_content"
      	    android:text="@string/cancel"
      	    android:layout_marginTop="40px"
      	    android:textColor="#FFFFFF"
      	    android:textSize="20dip"
      	    android:background="@drawable/buttonbg"/>
    </LinearLayout>

</LinearLayout>