<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<!-- 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:padding="5dp" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="110px"
            android:background="@drawable/tabbarbg" >
        </TabWidget>
    </LinearLayout>
 -->

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="110px"
        android:background="@drawable/tabbarbg"
        android:visibility="gone" >
    </TabWidget>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioGroup
            android:id="@+id/mainRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/tabbarbg"
            android:gravity="center"
            >
            <!-- 企事管理 -->
            <RadioButton
                android:id="@+id/Main_Radio_enterprise"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/main_enterprise"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="10dip"
                android:text="@string/main_enterprise"/>
            <!-- android:background="@drawable/main_radio_bg" -->
             <!-- 项目管理 -->"
            <RadioButton
                android:id="@+id/Main_Radio_project"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="10dip"
                android:text="@string/main_project" 
                android:drawableTop="@drawable/main_project" />
             <!-- 财务管理 -->
            <RadioButton
                android:id="@+id/Main_Radio_financial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="10dip"
                android:text="@string/main_financial" 
                android:drawableTop="@drawable/main_financial" />
             <!-- 系统设置 -->
            <RadioButton
                android:id="@+id/Main_Radio_system"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="10dip"
                android:text="@string/main_system" 
                android:drawableTop="@drawable/main_system" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>

</TabHost>