<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbg"
    android:gravity="center"
    android:orientation="vertical" >

    <!-- 公文管理 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/headerbg" >

        <Button
            android:id="@+id/Management_Details_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/project_back"
            android:text="@string/back" />

        <TextView
            android:id="@+id/Management_Details_tabbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="15dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal" >

        <ScrollView
            android:id="@+id/Management_Details_ScrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/Oficial_Details_bottom_linearLayout"
            android:layout_centerVertical="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/Management_Details_FileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="center"
                    android:text="@string/oficial_Details_Symbol_"
                    android:textColor="@color/white"
                    android:textSize="18dip" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dip"
                    android:background="@drawable/oficial_details_table_bg"
                    android:orientation="vertical" >

                    <WebView
                        android:id="@+id/Management_Details_WebView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="10dip"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/Management_Details_bottom_linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@drawable/oficial_details_bottom_bg"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Management_Details_bottom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:background="@drawable/oficial_details_button_bg"
                android:gravity="center"
                android:shadowColor="#ff000000"
                android:shadowDx="2"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/audit"
                android:textColor="@color/white"
                android:textSize="18dip" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>